--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .headerWelcome{ /*h1 align center*/
     text-align: center;
 }
-.headerWelcome{
+.headerWelcome{ /* header for animals html */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
 }
