--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
 .headerWelcome{ /* header for animals html */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
+.zooAnimal{
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 }
 #paragraph {
     text-align: center;
